// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModuleViewer — RTL Snapshot (Task 8) > renders correctly in LTR 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="flex flex-col gap-4 rounded-xl border border-border bg-card p-5 shadow-lg"
      data-testid="module-viewer"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div>
          <h2
            class="text-base font-semibold text-foreground"
          >
            CBC Refresher
          </h2>
          <p
            class="text-xs text-muted-foreground"
          >
            Complete Blood Count
             · 
            3
             
            min
          </p>
        </div>
        <button
          aria-label="Close"
          class="rounded p-1 text-muted-foreground hover:text-muted-foreground dark:hover:text-gray-200"
          data-testid="module-viewer-close"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col gap-3"
        data-testid="module-step"
      >
        <p
          class="text-xs font-medium text-muted-foreground"
        >
          Step 1 of 3
        </p>
        <div
          class="prose prose-sm max-w-none dark:prose-invert"
          data-testid="step-content"
        >
          <pre
            class="whitespace-pre-wrap font-sans text-sm leading-relaxed text-foreground"
          >
            ## Step 1: Collect sample
          </pre>
        </div>
        <div
          class="flex justify-between gap-2 pt-1"
        >
          <button
            class="rounded border border-border px-3 py-1.5 text-sm font-medium text-foreground disabled:opacity-40 hover:bg-muted"
            data-testid="step-back"
            disabled=""
            type="button"
          >
            Back
          </button>
          <button
            class="rounded bg-primary px-3 py-1.5 text-sm font-medium text-white hover:bg-primary/90 dark:bg-primary dark:hover:bg-blue-400"
            data-testid="step-next"
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModuleViewer — RTL Snapshot (Task 8) > renders correctly in RTL 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="flex flex-col gap-4 rounded-xl border border-border bg-card p-5 shadow-lg"
      data-testid="module-viewer"
    >
      <div
        class="flex items-start justify-between gap-2"
      >
        <div>
          <h2
            class="text-base font-semibold text-foreground"
          >
            CBC Refresher
          </h2>
          <p
            class="text-xs text-muted-foreground"
          >
            Complete Blood Count
             · 
            3
             
            min
          </p>
        </div>
        <button
          aria-label="Close"
          class="rounded p-1 text-muted-foreground hover:text-muted-foreground dark:hover:text-gray-200"
          data-testid="module-viewer-close"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x"
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col gap-3"
        data-testid="module-step"
      >
        <p
          class="text-xs font-medium text-muted-foreground"
        >
          Step 1 of 3
        </p>
        <div
          class="prose prose-sm max-w-none dark:prose-invert"
          data-testid="step-content"
        >
          <pre
            class="whitespace-pre-wrap font-sans text-sm leading-relaxed text-foreground"
          >
            ## Step 1: Collect sample
          </pre>
        </div>
        <div
          class="flex justify-between gap-2 pt-1"
        >
          <button
            class="rounded border border-border px-3 py-1.5 text-sm font-medium text-foreground disabled:opacity-40 hover:bg-muted"
            data-testid="step-back"
            disabled=""
            type="button"
          >
            Back
          </button>
          <button
            class="rounded bg-primary px-3 py-1.5 text-sm font-medium text-white hover:bg-primary/90 dark:bg-primary dark:hover:bg-blue-400"
            data-testid="step-next"
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
